# discord-bot

./: .gitpod.yml  Cargo.toml
gitpod/: .gitpod.Dockerfile  gitpod.Dockerfile
src/: main.rs
