[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Kreyren <KostWarCZE@RiXotStudio.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8.0"
hey_listen = "0.4.0"
white_rabbit = "0.1.1"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }